--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node app/server.js"
+        "start": "nodemon app/server.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.19.0",
-        "cronofy": "^3.2.0",
+        "cronofy": "^3.4.1",
         "dotenv": "^8.0.0",
         "ejs": "^2.6.2",
         "express": "^4.17.1",
-        "moment": "^2.24.0"
+        "moment": "^2.24.0",
+        "nodemon": "^2.0.3"
     }
 }
